src/objects/Family_Story_Guide__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Story Guides</relationshipLabel>
        <relationshipName>Family_Story_Guides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_FSG_ID__c</fullName>
        <description>Legacy ID for Family Story guide from SNI UI.  Used to attach the answers for data import.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy FSG ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Results/Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Offered</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Declined (Not Interested)</fullName>
                </value>
                <value>
                    <fullName>Declined (Busy, Try Again)</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partially Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Family Story Guide</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Story Guide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Story Guide</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>